...
    <string name="new_note">New Note</string>
    <string name="no_internet">No internet connection!</string>
    <string name="note_delete_fail">Note deletion failed, Please try again!!</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="note_saved">Note saved successfully</string>
    <string name="password">Password</string>
    <string name="password_blank">Password cannot be blank</string>
    <string name="password_changed_login">Password changed successfully. Please login again</string>
    <string name="password_invalid">Password must have at least 6 characters</string>
    <string name="password_reset_email_sent">An email to reset your password has been sent to your email</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="save">Save</string>
...
